<resources>
    <string name="app_name">writeAndReadData</string>
    <string name="message" translatable="false">Message</string>
    <string name="message_hint" translatable="false">Enter the message</string>
    <string name="phone" translatable="false">Phone Number</string>
    <string name="phone_hint" translatable="false">Enter the phone number</string>
    <string name="shared_pref_save" translatable="false">SH PF Save</string>
    <string name="sh_pref_retrieve" translatable="false">SH PF Retrive</string>
    <string name="F_save" translatable="false">File Save</string>
    <string name="F_retrieve" translatable="false">File Retrieve</string>
    <string name="sh_pref_save" translatable="false">shared pref</string>
</resources>